<resources>
    <string name="app_name">Profilepages</string>
    <string name="joeUsername">Bazooka Joe</string>
    <string name="mortUsername">Mort</string>
    <string name="usernameLabel">username: </string>
    <string name="Rate">Rate: </string>
    <string name="Rating">Rating: </string>
    <string name="mortRating">4.7</string>
    <string name="joeRating">3.5</string>
    <string name="Rating1">1</string>
    <string name="Rating2">2</string>
    <string name="Rating3">3</string>
    <string name="Rating4">4</string>
    <string name="Rating5">5</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_profile">MyProfile</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_bill">NewBill</string>
</resources>
