<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/joe"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText android:id="@+id/usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/usernameLabel" />

        <EditText android:id="@+id/joeUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/joeUsername"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText android:id="@+id/Rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Rating"
            android:paddingTop="20dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/joeRating"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <EditText android:id="@+id/Rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Rate"
        android:paddingTop="40dp" />

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/Rating1" />

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/Rating2" />

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/Rating3" />

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/Rating4" />

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/Rating5" />

    </LinearLayout>

</LinearLayout>

